# myequal-ai-common

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: auto-version.yml  ci.yml  publish.yml  release.yml
docs/: database.md  myequal-ai-common-repository-architecture.md
examples/: database_usage.py  session_id_example.py
scripts/: README.md  commit-msg-hook.sh  pre-commit-release-check.sh  setup-hooks.sh
src/myequal_ai_common/: __init__.py
src/myequal_ai_common/database/: __init__.py  base_manager.py  config.py  engines.py  examples.py  exceptions.py  metrics.py  sessions.py
src/myequal_ai_common/database/utils/: __init__.py  health.py  retry.py
src/myequal_ai_common/utils/: __init__.py  sample.py
tests/: __init__.py  conftest.py  test_utils.py
tests/database/: __init__.py  test_base_manager_mocked.py  test_config.py
