[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myequal-ai-common"
version = "0.1.1"
description = "Common utilities and shared code for MyEqual AI microservices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/myequal_ai_common"]